# graphy

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: breaking-changes.yml
config/frameworks/: express.toml  nextjs.toml  sveltekit.toml
config/tags/: c.scm  cpp.scm  csharp.scm  java.scm  php.scm
crates/graphy-analysis/: Cargo.toml  README.md
crates/graphy-analysis/frameworks/: angular.toml  axum.toml  django.toml  fastapi.toml  flask.toml  laravel.toml  nestjs.toml  rails.toml  react.toml  spring.toml  vue.toml  wordpress.toml
crates/graphy-analysis/src/: call_tracing.rs  change_coupling.rs  community.rs  complexity.rs  context_gen.rs  coverage.rs  dataflow.rs  dead_code.rs  discovery.rs  flow_detection.rs  heritage.rs  import_resolution.rs  lib.rs  lsp_enhance.rs  multi_repo.rs  pipeline.rs  structure.rs  taint.rs  type_analysis.rs
crates/graphy-analysis/src/framework/: detect.rs  mod.rs
crates/graphy-cli/: Cargo.toml  README.md
crates/graphy-cli/src/: main.rs
crates/graphy-core/: Cargo.toml  README.md
crates/graphy-core/src/: diff.rs  error.rs  gir.rs  graph.rs  lib.rs  storage.rs  symbol_id.rs
crates/graphy-deps/: Cargo.toml  README.md
crates/graphy-deps/src/: lib.rs  osv.rs  trace.rs
crates/graphy-deps/src/lockfiles/: cargo.rs  go.rs  mod.rs  npm.rs  poetry.rs  yarn.rs
crates/graphy-mcp/: Cargo.toml  README.md
crates/graphy-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/graphy-parser/: Cargo.toml  README.md
crates/graphy-parser/src/: dynamic_loader.rs  frontend.rs  grammar_compiler.rs  helpers.rs  lib.rs  python.rs  rust_lang.rs  svelte.rs  tags_frontend.rs  tags_registry.rs  typescript.rs
crates/graphy-parser/tags/: go.scm  ruby.scm
crates/graphy-search/: Cargo.toml  README.md
crates/graphy-search/src/: lib.rs  vector.rs
crates/graphy-watch/: Cargo.toml  README.md
crates/graphy-watch/src/: lib.rs
crates/graphy-web/: Cargo.toml  README.md
crates/graphy-web/src/: lib.rs
tests/fixtures/calibration/flask_app/: app.py
tests/fixtures/calibration/rust_project/src/: main.rs  utils.rs
tests/fixtures/calibration/rust_workspace/crate_a/src/: lib.rs
tests/fixtures/calibration/rust_workspace/crate_b/: Cargo.toml
tests/fixtures/calibration/rust_workspace/crate_b/src/: lib.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/lib/: icons.ts
web/src/lib/api/: client.ts
web/src/lib/components/: AnalysisView.svelte  ArchitectureView.svelte  Badge.svelte  BarChart.svelte  CodeViewer.svelte  ExplorerView.svelte  FileTree.svelte  GraphCanvas.svelte  LoadingPulse.svelte  Nav.svelte  ReferencesPanel.svelte  SearchView.svelte  SecurityView.svelte  StatCard.svelte  SymbolDetail.svelte  SymbolsPanel.svelte
web/src/lib/graph/: sigma.ts
web/src/lib/stores/: app.svelte.ts
