[package]
name = "graphy-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "14-phase analysis pipeline for graphy"
repository.workspace = true

[dependencies]
graphy-core = { workspace = true }
graphy-parser = { workspace = true }
petgraph = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
