[package]
name = "graphy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core graph data structures and persistence for graphy"
repository.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
petgraph = { workspace = true }
redb = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
