[package]
name = "graphy-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for graphy"
repository.workspace = true

[dependencies]
graphy-core = { workspace = true }
graphy-search = { workspace = true }
graphy-deps = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
