[package]
name = "graphy-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter parsing and dynamic grammar loading for graphy"
repository.workspace = true

[dependencies]
graphy-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-svelte-ng = { workspace = true }
streaming-iterator = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
libloading = { workspace = true }
dirs = { workspace = true }
