[package]
name = "graphy-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web dashboard and REST API for graphy"
repository.workspace = true

[dependencies]
graphy-core = { workspace = true }
graphy-search = { workspace = true }
petgraph = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = "2"
